# Homework

./: .gitignore  README.md  catalog.json  data_blog.json  data_catalog.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py  0003_alter_blog_created_at_alter_blog_preview.py  0004_alter_blog_views_count.py  0005_alter_blog_created_at.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0003_version.py  0004_alter_version_nuber_of_version.py  0005_rename_nuber_of_version_version_number_of_version.py  0006_alter_version_is_actual.py  0007_product_owner.py
catalog/templates/catalog/: contact.html  home.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_footer.html  inc_menu.html
config/: settings.py  urls.py
users/: models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
